AI: cap objective scoring and lower Move R2